[package]
name = "m64"
version = "0.0.1"
edition = "2021"
default-run = "m64"
license = "MIT"
description = "A MAXCOM 64 personal computer emulator"
repository = "https://github.com/jakeledoux/m64"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
from-pest = "0.3.1"
minifb = "0.20.0"
pest = "2.1.3"
pest-ast = "0.3.3"
pest_derive = "2.1.0"
thiserror = "1.0.30"
